orario-cluster/k8s/appl_yaml/04_ingress-http-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: gestione-orario
  name: workhours-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: orario.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: workhours-frontend
            port:
              number: 80
