orario-cluster/k8s/appl_yaml/05_orario-ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: gestione-orario
  name: workhours-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: ""
    traefik.ingress.kubernetes.io/router.priority: "1000"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - orario.local
    secretName: orario-tls
  rules:
  - host: orario.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: workhours-frontend
            port:
              number: 80
